@@ -20,6 +20,7 @@
 
     <java.version>11</java.version>
     <javafx.version>15.0.1</javafx.version>
+    <lombok.version>1.18.16</lombok.version>
   </properties>
 
   <modules>
@@ -36,12 +37,6 @@
       <!-- ============== -->
       <!-- Database & JPA -->
       <!-- ============== -->
-      <!-- https://search.maven.org/artifact/jakarta.persistence/jakarta.persistence-api -->
-      <dependency>
-        <groupId>jakarta.persistence</groupId>
-        <artifactId>jakarta.persistence-api</artifactId>
-        <version>2.2.3</version>
-      </dependency>
       <!-- https://search.maven.org/artifact/org.hibernate/hibernate-core -->
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -58,17 +53,63 @@
       <!-- =========== -->
       <!-- Open JavaFX -->
       <!-- =========== -->
+      <!-- https://search.maven.org/artifact/org.openjfx/javafx-base -->
+      <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-base</artifactId>
+        <version>${javafx.version}</version>
+      </dependency>
       <!-- https://search.maven.org/artifact/org.openjfx/javafx-controls -->
       <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>15.0.1</version>
+        <version>${javafx.version}</version>
       </dependency>
       <!-- https://search.maven.org/artifact/org.openjfx/javafx-fxml -->
       <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-fxml</artifactId>
-        <version>15.0.1</version>
+        <version>${javafx.version}</version>
+      </dependency>
+      <!-- https://search.maven.org/artifact/org.openjfx/javafx-graphics -->
+      <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-graphics</artifactId>
+        <version>${javafx.version}</version>
+      </dependency>
+
+      <!-- ============ -->
+      <!-- Google Guice -->
+      <!-- ============ -->
+      <!-- https://search.maven.org/artifact/com.google.inject/guice -->
+      <dependency>
+        <groupId>com.google.inject</groupId>
+        <artifactId>guice</artifactId>
+        <version>4.2.3</version>
+      </dependency>
+      <!-- https://search.maven.org/artifact/com.gluonhq/ignite-guice -->
+      <dependency>
+        <groupId>com.gluonhq</groupId>
+        <artifactId>ignite-guice</artifactId>
+        <version>1.1.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <!-- =========== -->
@@ -78,7 +119,7 @@
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>1.18.16</version>
+        <version>${lombok.version}</version>
       </dependency>
       <!-- https://search.maven.org/artifact/org.apache.commons/commons-lang3 -->
       <dependency>
@@ -115,6 +156,19 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- ============ -->
+    <!-- Google Guice -->
+    <!-- ============ -->
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
     <!-- ========== -->
     <!-- Test tools -->
     <!-- ========== -->
@@ -203,6 +257,13 @@
           <source>${java.version}</source>
           <target>${java.version}</target>
           <release>${java.version}</release>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}  </version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
 
@@ -210,8 +271,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>--add-opens java.base/java.lang=com.google.guice</argLine>
           <includes>
-            <include>**/Test*Unit*</include>
+            <include>**/*Tests</include>
           </includes>
         </configuration>
       </plugin>
