@@ -24,11 +24,19 @@
     <!-- =========== -->
     <dependency>
       <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.gluonhq</groupId>
+      <artifactId>ignite-guice</artifactId>
     </dependency>
   </dependencies>
 
@@ -38,7 +46,11 @@
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <configuration>
-          <mainClass>de.regatta_hd.ui.App</mainClass>
+          <mainClass>de.regatta_hd.ui.RegattaHD</mainClass>
+          <options>
+            <option>--add-opens</option>
+            <option>java.base/java.lang=com.google.guice</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
